Fix poor contrast in 'Your list' interface

--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -100,7 +100,7 @@ select {
   border: none;
   border-radius: 4px;
   background: $button_color;
-  color: #fff;
+  color: $button_text_color;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   font-size: 15px;
