--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -66,6 +66,7 @@ h1 + ul li {
   margin: 70px 10px 0 0;
   float: right;
   font-weight: bold;
+  color: $button_text_color;
 }
 
 .list-container {
@@ -113,6 +114,7 @@ h1 + ul li {
   font-size: 14px;
   text-align: center;
   background: $button_color;
+  color: $button_text_color;
 }
 
 .list-hover span {
